<resources>
    <string name="app_name">Конвертер валют</string>
    <string name="txtConvertTo">Конвертировать в</string>
    <string name="toConvert">Конвертировать</string>
    <string name="txtConvertFrom">Конвертировать из</string>
    <string name="txtResult">Результат</string>
    <string name="txtValue">Ведите значение</string>
    <string-array name="listCurrencies">
        <item>EUR</item>
        <item>RUB</item>
        <item>USD</item>
    </string-array>
</resources>
